[tool.poetry]
name = "pyg-direct-communication-service"
version = "0.1.0"
description = ""
authors = ["Artem Arkhipov a.arkhipov@docet.ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
alembic = "^1.13.0"
instagrapi = "2.0.0"
aiohttp = "^3.9.1"
uvicorn = "^0.24.0.post1"
pillow = "^10.1.0"
environs = "^9.5.0"
loguru = "^0.7.2"
sentry-sdk = "^1.39.1"
python-facebook-api = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
